Fix navbar change to border box introducing extra whitespace

--- a/resources/assets/css/outer/outer.less
+++ b/resources/assets/css/outer/outer.less
@@ -183,7 +183,7 @@
   }
 
   // Extra padding to account for sticky navbar
-  padding-top: 71px;
+  padding-top: 70px;
 
   @import "shared/banner.less";
   @import "shared/jumbotron.less";
